# enginey

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
lib/glad/: CMakeLists.txt
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
src/: main.cpp
src/backend/: camera.cpp  camera.h  context.cpp  context.h
src/graphics/: model.cpp  model.h  shader.cpp  shader.h  texture.cpp  texture.h
src/math/: math.cpp  math.h
